force-app/main/default/objects/Design_Concept_Association__c/Design_Concept_Association__c.object-meta.xml
<CustomObject>
    <label>Design Concept Association</label>
    <nameField>
        <label>Design Concept Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Design Concept Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>