force-app/main/default/objects/Design_Concept_Association__c/fields/Concept_Description__c.field-meta.xml
<CustomField>
    <fullName>Concept_Description__c</fullName>
    <formula>Concept_Item__r.PDLM__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concept Description</label>
    <type>Text</type>
</CustomField>