force-app/main/default/objects/Design_Concept_Association__c/fields/Concept_Item__c.field-meta.xml
<CustomField>
    <fullName>Concept_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concept Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PDLM__Item__c.PDLM__Category__r.Name</field>
            <operation>equals</operation>
            <value>Design Concept</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PDLM__Item__c</referenceTo>
    <relationshipLabel>Item Associations</relationshipLabel>
    <relationshipName>Design_Concept_Associations1</relationshipName>
    <type>Lookup</type>
</CustomField>