force-app/main/default/objects/Design_Concept_Association__c/fields/Master_Item__c.field-meta.xml
<CustomField>
    <fullName>Master_Item__c</fullName>
    <label>Master Item</label>
    <referenceTo>PDLM__Item__c</referenceTo>
    <relationshipLabel>Design Concepts</relationshipLabel>
    <relationshipName>Design_Concept_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>